2008-05-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Scoring On Other Headers): Fix typo.  Rearrange.

2008-05-15  Jonathan Yavner  <jyavner@member.fsf.org>

	* ses.texi (Acknowledgements): Add Shigeru Fukaya.

2008-05-06  Juanma Barranquero  <lekktu@gmail.com>

	* info.texi (Top): Fix typo in xref.

2008-05-05  Karl Berry  <karl@gnu.org>

	* info.texi (Top): @xref to stand-alone manual.

2008-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Various Summary Stuff): Add gnus-propagate-marks.
	(Various Summary Stuff): Fix typo in last xref.

2008-05-02  Juanma Barranquero  <lekktu@gmail.com>

	* org.texi (Moving subtrees): Fix typo.

2008-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Explain, how to disable
	Tramp via `tramp-mode'.

2008-04-27  Carsten Dominik  <dominik@sam.science.uva.nl>

	* org.texi: Massive changes, in many parts of the file.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Searching, nnir.el, nnmairix.el): New nodes.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Oort Gnus): Add message-fill-column.

2008-04-12  Adrian Aichner  <adrian@xemacs.org>

	* gnus.texi (Mail Source Specifiers): Typo fix.

2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Diary Headers Generation): Update key binding for
	`gnus-diary-check-message'.

2008-04-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Emacsen): Addition.

2008-04-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Emacsen): Give recommendations for Emacs 22 and Emacs 23.

2008-04-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Oort Gnus): Mention customizing of tool bars.

2008-04-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-news.texi: Update tool bar item.

2008-04-09  Sven Joachim  <svenjoac@gmx.de>

	* gnus-news.texi: Fix typos.

2008-04-11  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Vector and Matrix Arithmetic, Calc Summary):